    probably to alleviate early case sensitivity
    issues with dialects like Oracle and 
    Firebird.   These issues have been more cleanly
    solved in more modern versions so the performance
    hit of calling lower() on identifiers is removed.
    The case insensitive comparisons can be re-enabled
    by setting "case_insensitive=False" on 
    create_engine().  [ticket:2423]

  - [bug] column.label(None) now produces an 
    anonymous label, instead of returning the
    column object itself, consistent with the behavior
    of label(column, None).  [ticket:2168]

  - [bug] Removed warning when Index is created
    with no columns; while this might not be what 
    the user intended, it is a valid use case 
    as an Index could be a placeholder for just an 
    index of a certain name.
    also in 0.7.7.

  - [feature] Added new connection event
    dbapi_error(). Is called for all DBAPI-level
    errors passing the original DBAPI exception
    before SQLAlchemy modifies the state 
    of the cursor.
    also in 0.7.7.

  - [bug] If conn.begin() fails when calling
    "with engine.begin()", the newly acquired
    Connection is closed explicitly before 
    propagating the exception onward normally.
    also in 0.7.7.

- sqlite
  - [feature] the SQLite date and time types
    have been overhauled to support a more open
    ended format for input and output, using 
    name based format strings and regexps.  A
    new argument "microseconds" also provides
    the option to omit the "microseconds" 
    portion of timestamps.  Thanks to 
    Nathan Wright for the work and tests on
    this.  [ticket:2363]

- mssql
  - [bug] removed legacy behavior whereby 
    a column comparison to a scalar SELECT via 
    == would coerce to an IN with the SQL server
    dialect.  This is implicit
    behavior which fails in other scenarios
    so is removed.  Code which relies on this
    needs to be modified to use column.in_(select)
    explicitly.  [ticket:2277]
